--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 }
 
 .highlight {
-  background-color: white;
+  background-color: #373296;
 }
 
 img {
@@ -16,11 +16,11 @@ img {
   
 }
 
-.comparison {
+/* .comparison {
   background-color: white;
-}
+} */
 
-.uber {
+/* .uber {
   height: 40vh;
   background-color: white;
 }
@@ -28,7 +28,7 @@ img {
 .lyft {
   height: 40vh;
   background-color: white;
-}
+} */
 
 .list-group-item:hover {
   background-color: #373296;
